# cik-cusip-mapping

./: .coveragerc  .gitignore  AGENTS.md  LICENSE  README.md  audit_sample_filings.py  compare_cusips.py  dl.py  dl_idx.py  extract_cusip_improved.py  main.py  parse_cusip.py  pyproject.toml  requirements-dev.txt  run_pipeline.py  sec_utils.py  test_cusip_extraction.py  test_fixes.py  test_main.py
analysis/: compare_parser.py  cusip_contexts.txt  manual_input.csv  manual_input.py  manual_review.txt
form_examples/: 1994_SC 13DA_24058.txt  1994_SC 13DA_25445.txt  1994_SC 13DA_3000.txt  1994_SC 13DA_3499.txt  1994_SC 13DA_36208.txt  1994_SC 13DA_45370.txt  1994_SC 13DA_50104.txt  1994_SC 13DA_52988.txt  1994_SC 13DA_757011.txt  1994_SC 13DA_757523.txt  1994_SC 13DA_797565.txt  1994_SC 13DA_802019.txt  1994_SC 13DA_820392.txt  1994_SC 13DA_830134.txt  1994_SC 13DA_884219.txt  1994_SC 13DA_91576.txt  1994_SC 13D_356981.txt  1994_SC 13D_49588.txt  1994_SC 13D_6207.txt  1994_SC 13GA_732812.txt  1994_SC 13G_732812.txt  1995_SC 13DA_789851.txt  1995_SC 13D_718451.txt  1995_SC 13GA_866817.txt  1995_SC 13G_758004.txt  1996_SC 13DA_912428.txt  1996_SC 13D_864337.txt  1996_SC 13GA_933203.txt  1996_SC 13G_942826.txt  1997_SC 13DA_1026797.txt  1997_SC 13D_1019830.txt  1997_SC 13GA_900640.txt  1997_SC 13G_864047.txt  1998_SC 13DA_315398.txt  1998_SC 13D_1018980.txt  1998_SC 13GA_728974.txt  1998_SC 13G_732812.txt  1999_SC 13DA_1052262.txt  1999_SC 13D_1014343.txt  1999_SC 13GA_1061554.txt  (+112 more)
sample_analysis/: __init__.py  cusip_comparison.json  review.py
sample_filings/: 1004740.txt  1011659.txt  102379.txt  1045280.txt  1091973.txt  1094831.txt  1127703.txt  1178056.txt  1274032.txt  1278027.txt  1283140.txt  1289236.txt  1344907.txt  1368148.txt  1389072.txt  1411342.txt  14846.txt  19745.txt  201461.txt  3499.txt  39273.txt  49071.txt  64803.txt  712034.txt  723603.txt  730263.txt  8504.txt  850693.txt  85961.txt  866368.txt  892535.txt  912752.txt  913665.txt  921847.txt  925548.txt  930236.txt  95366.txt  97196.txt  cusip_audit_results.csv  cusip_audit_results.json  (+1 more)
src/cik_cusip/: __init__.py  cli.py  cusip.py  index.py  processor.py  rate_limiter.py  session.py  utils.py
src/cik_cusip_mapping/: __init__.py  cli.py  filters.py  indexing.py  parsing.py  pipeline.py  postprocessing.py  progress.py  sec.py  streaming.py
tests/: __init__.py  test_cli.py  test_cusip.py  test_dl_idx.py  test_index.py  test_indexing_progress.py  test_parsing_concurrency.py  test_parsing_events.py  test_parsing_heuristics.py  test_pipeline.py  test_postprocessing_dynamics.py  test_processor.py  test_rate_limiter.py  test_run_pipeline.py  test_sec_retry.py  test_session.py  test_streaming_filters.py  test_streaming_regression.py  test_streaming_session.py  test_utils.py
tests/data/: master_sample.idx
