[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cik-cusip-mapping"
version = "0.1.0"
description = "Tools for building a mapping between SEC CIKs and CUSIPs."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "CIK CUSIP Maintainers" }
]
keywords = ["sec", "edgar", "cik", "cusip", "finance"]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "pandas>=2.0",
  "requests>=2.0",
  "tqdm>=4.0",
]

[project.urls]
Homepage = "https://github.com/CIK-CUSIP/cik-cusip-mapping"
Repository = "https://github.com/CIK-CUSIP/cik-cusip-mapping"

[project.scripts]
cik-cusip-run-pipeline = "cik_cusip_mapping.cli:run_pipeline_cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
