[project]
name = "cik-cusip-mapping"
version = "2.0.0"
description = "Simple tool for extracting CUSIPs from SEC 13D/13G filings."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "CIK CUSIP Maintainers" }
]
keywords = ["sec", "edgar", "cik", "cusip", "finance"]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "requests>=2.0",
]

[project.urls]
Homepage = "https://github.com/Orgron/cik-cusip-mapping"
Repository = "https://github.com/Orgron/cik-cusip-mapping"
